[project]
name = "x-scraper"
version = "0.1.0"
description = "Advanced X (Twitter) scraper with proxy rotation and AI integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "jmespath>=1.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "aiohttp-socks>=0.8.0",
    "openai>=1.0.0",
    "configparser>=5.3.0",
    "asyncio>=3.4.3",
    "fake-useragent>=1.4.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "aiofiles>=23.0.0",
    "requests[socks]>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
x-scraper = "main:main"
